// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submit shared handler error handling should detect if the JCL source type (data set, etc.) could not be determined 1`] = `"Internal submit error: Unable to determine the JCL source. Please contact support."`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": undefined,
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 2`] = `undefined`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for active 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a data-set if requested and wait for output 3`] = `"Submitted JCL contained in \\"dataset\\": \\"DATA.SET\\""`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "UNKNOWN",
    "status": "INPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "UNKNOWN",
  "status": "INPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a local-file if requested 3`] = `"Submitted JCL contained in \\"local-file\\": \\"test.txt\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for active 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 1`] = `
Object {
  "fields": Array [
    "jobid",
    "retcode",
    "jobname",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "JOB123",
    "jobname": "MYJOB",
    "retcode": "CC 0000",
    "status": "OUTPUT",
  },
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 2`] = `
Object {
  "jobid": "JOB123",
  "jobname": "MYJOB",
  "retcode": "CC 0000",
  "status": "OUTPUT",
}
`;

exports[`submit shared handler process method should submit JCL contained within a uss-file if requested and wait for output 3`] = `"Submitted JCL contained in \\"uss-file\\": \\"undefined\\""`;
